--- a/build.gradle
+++ b/build.gradle
@@ -43,12 +43,17 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '3.3.3'
-    // 日志
-//    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+
     // 工具类
     implementation('org.apache.commons:commons-lang3:3.12.0')
     //json
     implementation 'com.alibaba:fastjson:1.2.79'
+    // 数据库
+    implementation group: 'com.baomidou', name: 'mybatis-plus-generator', version: '3.4.1'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.3'
+
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '3.3.3'
+
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
