--- a/build.gradle
+++ b/build.gradle
@@ -47,11 +47,13 @@ dependencies {
     // 工具类
     implementation('org.apache.commons:commons-lang3:3.12.0')
     //json
-    implementation 'com.alibaba:fastjson:1.2.79'
+    implementation group: 'com.alibaba.fastjson2', name: 'fastjson2', version: '2.0.53'
+
     // 数据库
-    implementation group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: '3.3.2'
-    implementation group: 'com.baomidou', name: 'mybatis-plus-generator', version: '3.4.1'
-    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.3'
+    implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '3.0.3'
+    implementation group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: '3.5.8'
+    implementation group: 'com.baomidou', name: 'mybatis-plus-generator', version: '3.5.8'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.46.1.3'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '3.3.3'
     implementation("org.freemarker:freemarker:2.3.31")
 
