--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,5 +13,8 @@ spring:
     configuration:
       log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
-    type-aliases-package: com.app.po
-    mapper-locations: classpath:mapper/*.xml
+    type-aliases-package: com.app.pojo
+    mapper-locations: classpath:com.app.mapper.xml/*.xml
+
+  main:
+    allow-bean-definition-overriding: true
